--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+actix = "0.10.0"
+actix-web = "3.0.1"
+anyhow = "1.0.32"
 cec-rs = "2.0.1"
