--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-actix = "0.10.0"
-actix-web = "3.0.1"
-anyhow = "1.0.32"
-cec-rs = "2.0.1"
-termion = "1.5.5"
+actix = "0.10"
+actix-web = "3.1"
+actix-http="2.0"
+anyhow = "1.0"
+cec-rs = "2.0"
+serde = { version = "1.0", features = ["derive"] } 
+env_logger = "0.7"
+termion = "1.5"
