--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix = "0.10"
 actix-web = "3.1"
 actix-http="2.0"
 anyhow = "1.0"
+log = "0.4"
 cec-rs = "2.0"
 serde = { version = "1.0", features = ["derive"] } 
 env_logger = "0.7"
