--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "cecvol"
 version = "0.1.0"
 authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+description = "Allow external control of CEC commands to TV"
 edition = "2018"
 
 [dependencies]
@@ -15,3 +18,8 @@ libcec-sys = "*"
 serde = { version = "1.0", features = ["derive"] } 
 env_logger = "0.7"
 termion = "1.5"
+
+[package.metadata.deb]
+depends = "$auto,libcec"
+maintainer-scripts = "debian/"
+systemd-units = { }
