--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,13 @@ anyhow = "1.0"
 log = "0.4"
 cec-rs = "2.0"
 libcec-sys = "*"
+lazy_static = "1.4"
+libc = "0.2"
+nix = "0.18"
 serde = { version = "1.0", features = ["derive"] } 
 env_logger = "0.7"
 termion = "1.5"
+thiserror = "1.0"
 
 [package.metadata.deb]
 maintainer-scripts = "debian/"
