--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2018"
 [dependencies]
 actix = "0.10"
 actix-web = "3.1"
-actix-http="2.0"
+actix-http = "2.0"
+array-init = "0.1"
 anyhow = "1.0"
 log = "0.4"
 cec-rs = "2.0"
@@ -18,6 +19,7 @@ libcec-sys = "*"
 lazy_static = "1.4"
 libc = "0.2"
 nix = "0.18"
+num_enum = "0.5"
 serde = { version = "1.0", features = ["derive"] } 
 env_logger = "0.7"
 termion = "1.5"
