--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ edition = "2018"
 actix = "0.10"
 actix-web = "3.1"
 actix-http = "2.0"
-array-init = "0.1"
 anyhow = "1.0"
 log = "0.4"
 lazy_static = "1.4"
@@ -20,8 +19,8 @@ nix = "0.18"
 num_enum = "0.5"
 serde = { version = "1.0", features = ["derive"] } 
 env_logger = "0.7"
-termion = "1.5"
 thiserror = "1.0"
+tokio= { version="0.2", features=["time"] }
 
 [package.metadata.deb]
 maintainer-scripts = "debian/"
