--- a/debian/cecvol.service
+++ b/debian/cecvol.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Allow external control of CEC commands to TV
-After=network.target graphical.target
+After=network.target
 
 [Service]
 DynamicUser=yes
