--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,15 @@ actix = "0.10"
 actix-web = "3.1"
 actix-http = "2.0"
 anyhow = "1.0"
+base64 = "0.13"
 log = "0.4"
 lazy_static = "1.4"
 libc = "0.2"
 nix = "0.18"
 num_enum = "0.5"
 serde = { version = "1.0", features = ["derive"] } 
+serde_json = "1.0"
+sha2 = "0.9"
 env_logger = "0.7"
 thiserror = "1.0"
 tokio= { version="0.2", features=["time"] }
