--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1.4"
 libc = "0.2"
 nix = "0.18"
 num_enum = "0.5"
+percent-encoding = "2.1"
 serde = { version = "1.0", features = ["derive"] } 
 serde_json = "1.0"
 sha2 = "0.9"
