--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ sha2 = "0.10.6"
 thiserror = "1.0.37"
 time = "0.3.15"
 tokio = { version = "1.21.2", features = ["full"] }
+tower-http = { version = "0.3.4", features = ["trace"] }
+tracing = "0.1.37"
 
 [package.metadata.deb]
 maintainer-scripts = "debian/"
