--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cecvol"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -19,13 +19,13 @@ log = "0.4.17"
 nix = "0.25.0"
 num_enum = "0.5.7"
 percent-encoding = "2.2.0"
+prometheus = { version = "0.13.2", features = ["process"] }
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.86"
 sha2 = "0.10.6"
 thiserror = "1.0.37"
 time = "0.3.15"
 tokio = { version = "1.21.2", features = ["full"] }
-tower-http = { version = "0.3.4", features = ["trace"] }
 tracing = "0.1.37"
 
 [package.metadata.deb]
