--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,16 @@ description = "Allow external control of CEC commands to TV"
 edition = "2021"
 
 [dependencies]
-axum = "0.5.16"
-base64 = "0.13.0"
+axum = "0.6.4"
+axum-macros = "0.3.2"
+base64 = "0.21.0"
 clap = { version = "4.0.15", features = ["derive"] }
-cookie = "0.16.1"
-env_logger = "0.9.1"
+cookie = "0.17.0"
+env_logger = "0.10.0"
 lazy_static = "1.4.0"
 libc = "0.2.135"
 log = "0.4.17"
-nix = "0.25.0"
+nix = "0.26.2"
 num_enum = "0.5.7"
 percent-encoding = "2.2.0"
 prometheus = { version = "0.13.2", features = ["process"] }
@@ -30,4 +31,4 @@ tracing = "0.1.37"
 
 [package.metadata.deb]
 maintainer-scripts = "debian/"
-systemd-units = { }
+systemd-units = {}
