--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,12 @@ rand = { version = "0.8.5", features = ["std_rng"] }
 rouille = "3.6.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.86"
+serde_urlencoded = "0.7.1"
 sha2 = "0.10.6"
 thiserror = "1.0.37"
 time = "0.3.15"
 tracing = "0.1.37"
+ureq = { version = "2.10.1", features = ["json"] }
 
 [package.metadata.deb]
 maintainer-scripts = "debian/"
