--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,6 @@ edition = "2021"
 
 [dependencies]
 aes = "0.8.2"
-axum = "0.6.4"
-axum-macros = "0.3.2"
 base64 = "0.21.0"
 block-padding = "0.3.2"
 cbc = "0.1.2"
@@ -27,12 +25,12 @@ pbkdf2 = { version = "0.12.1", features = ["hmac"] }
 percent-encoding = "2.2.0"
 prometheus = { version = "0.13.2", features = ["process"] }
 rand = { version = "0.8.5", features = ["std_rng"] }
+rouille = "3.6.2"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.86"
 sha2 = "0.10.6"
 thiserror = "1.0.37"
 time = "0.3.15"
-tokio = { version = "1.21.2", features = ["full"] }
 tracing = "0.1.37"
 
 [package.metadata.deb]
